# forgetMail

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  refrences.txt
.github/: pre-commit-config.yaml
.github/workflows/: ci.yml
docs/: aiogram_api_guide.md
src/forgetmail/: __init__.py  classifier.py  cli.py  config.py  daemon.py  embedding_client.py  gmail_client.py  llm.py  notifier.py  poller.py  secrets.py  store.py  vector_store.py
src/forgetmail/auth/: __init__.py  google.py  telegram.py  wizard.py
src/forgetmail/classifier/: __init__.py  models.py  parsing.py  prompts.py  service.py
src/forgetmail/cli/: __init__.py  app.py  parser.py
src/forgetmail/config/: __init__.py  defaults.py  validation.py
src/forgetmail/daemon/: __init__.py  ask.py  callbacks.py  commands.py  common.py  logging_utils.py  polling.py  telegram_io.py
src/forgetmail/embedding_client/: __init__.py  client.py  formatting.py
src/forgetmail/gmail_client/: client.py
src/forgetmail/llm/: __init__.py  api.py  auth.py  parsing.py  providers.py
src/forgetmail/notifier/: __init__.py  bot.py  models.py
src/forgetmail/poller/: __init__.py  parsing.py  service.py
src/forgetmail/secrets/: __init__.py  env.py  keyring_store.py
src/forgetmail/store/: constants.py  mappers.py  schema.py  state_store.py
src/forgetmail/telegram/: __init__.py  aiogram_client.py
src/forgetmail/vector_store/: __init__.py  service.py
tests/: test_classifier.py  test_daemon_e2e.py  test_llm.py  test_store.py
