[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "forgetmail"
version = "0.1.0"
description = "Linux-native Gmail to Telegram signal bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"google-auth-oauthlib>=1.2",
	"google-auth-httplib2>=0.2",
	"google-api-python-client>=2.120",
	"aiogram>=3.10.0",
	"chromadb>=0.5.5",
	"httpx>=0.27",
	"keyring>=25.0",
	"tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
	"pre-commit>=3.7",
	"ruff>=0.6.0",
]

[project.scripts]
forgetMail = "forgetmail.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
	"E9",
	"F",
]
per-file-ignores = {"**/__init__.py" = ["F401"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
]
